# blt

./: .env.example  .gitignore  .gitmodules  AGENTS.md  BUILD.md  README.md  ROADMAP.md  config.py  flow.txt  main.py  prompts.txt  pyproject.toml  test_agent_simple.py  擱淺_new.txt
benchmarks/: README.md  generate_reports.py  generate_visualizations.py  run_experiment.py
benchmarks/experiments/: README.md  __init__.py  baseline.py  evaluator.py  reporter.py  runner.py  utils.py
benchmarks/utils/: README.md  __init__.py  kkbox_scraper.py
docs/: LYRICS_TRANSLATION.md
examples/: README.md  complete_pipeline.py  covert_to_ipa.py  gen_translated_song.py  generate_ktv_video.py  generate_lipsync_video.py  get_ipa.py  get_rvc_vocal.py  get_separate_vocals.py  get_soramimi_lyrics.py  get_translate_lyrics.py  get_translated_lyrics.py  lyrics_translation_demo.py  modular_translator_example.py  new_all_pipeline.ipynb  pipeline.ipynb  rvc_ktv_pipeline_example.py  separate_vocals.py  translate_getan.py  translate_lyrics.py  translate_lyrics_cot.py  wav2lip_example.py
examples/gemini_translator/: __init__.py  example.py
lyrics_translation/: README.md  __init__.py  feature_extractor.py  models.py  translator.py  validator.py
scripts/: analyze_results.py  create_audio_caption_mapping.py  find_optimal_threshold.py  grid_search.py  inference.py  inference_with_examples.py  load_data.py  lyrics_translation_demo.py  poc.py  poc_audio_encoded_icl.py  poc_icl_evaluation.py  poc_icl_pipeline.py  poc_inference.py  poc_paired_icl.py  poc_structured_icl.py  test_lyrics_translation.py
scripts/examples/: jass.json  jazz.json  lyrics_translation_example.py
src/blt/pipeline/: cover_song_pipeline.py  rvc_ktv_pipeline.py
src/blt/synthesizer/: __init__.py  lyrics_aligner.py  rvc_converter.py  vocal_separator.py  wav2lip.py
src/blt/synthesizer/video_generator/: ktv_video_generator.py  lipsync_video_generator.py
src/blt/translators/: __init__.py  agents.py  analyzer.py  config.py  configs.py  feature_extractor.py  graphs.py  models.py  translator.py  validator.py  validators.py
src/blt/translators/gemini_translator/: __init__.py  agent.py  config.py  graph.py  models.py  translator.py  validator.py
src/blt/translators/graphs/: __init__.py  lyrics_translation.py  prompts.py  soramimi_translation.py  state.py  tools.py
src/blt/translators/lyrics_translation/: agent.py  graph.py  tools.py  (+2 more)
src/omg/: __init__.py  base.py
src/omg/configs/: default.yaml
src/omg/encoders/: __init__.py  base.py  encodec.py  melody.py
src/omg/lyrics_translation/: __init__.py  lyrics_aligner.py  models.py  pipeline.py  translator.py  vocal_separator.py  voice_synthesizer.py
src/omg/models/: __init__.py  base.py  icl_musicgen.py  musicgen.py
src/omg/pipeline/: __init__.py  cover_song_pipeline.py
src/omg/synthesizer/: __init__.py  lyrics_aligner.py  pipeline.py  vocal_separator.py
src/omg/translators/: __init__.py  feature_extractor.py  models.py  translator.py  validator.py
tests/: __init__.py  conftest.py  test_rhyme_extracting.py  test_syllable_counting.py  test_word_segmentation.py
(+11 files in other folders)
