[project]
name = "omg"
version = "0.1.0"
description = "Audio In-Context Learning for Text-to-Music Generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "transformers>=4.40.0,<4.50.0",
    "datasets>=2.19.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "numpy>=1.26.0,<2.0.0",
    "scipy>=1.12.0",
    "tqdm>=4.66.0",
    "faiss-cpu>=1.13.0",
    "pypinyin>=0.55.0",
    "syllables>=1.1.4",
    "python-dotenv>=1.2.1",
    "google-genai>=1.52.0",
    "pronouncing>=0.2.0",
    "demucs>=4.0.1",
    "ctc-forced-aligner>=1.0.2",
    "openunmix>=1.3.0",
    "praat-parselmouth>=0.4.6",
    "tts>=0.22.0",
    "langdetect>=1.0.9",
    "pydantic-ai-slim>=1.22.0",
    "phonemizer>=3.3.0",
]

[dependency-groups]
dev = ["librosa>=0.11.0", "pretty-midi>=0.2.11", "yt-dlp>=2025.11.12"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "ipython>=8.24.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omg"]
