[project]
name = "blt"
version = "0.1.0"
description = "BLT: AI Song Translator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "numpy>=1.26.0,<2.0.0",
    "pypinyin>=0.55.0",
    "demucs>=4.0.1",
    "ctc-forced-aligner>=1.0.2",
    "praat-parselmouth>=0.4.6",
    "pydantic-ai-slim[google]>=1.22.0",
    "phonemizer>=3.3.0",
    "dotenv>=0.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blt"]
